# CRX-10iA-Pick-and-Place-Simulation

./: README.md
src/crx_10ia_action/: CMakeLists.txt  package.xml
src/crx_10ia_action/launch/: action.launch.py
src/crx_10ia_action/src/: block_pick_place_node.cpp
src/crx_10ia_controller/: CMakeLists.txt  package.xml
src/crx_10ia_controller/config/: crx_10ia_controllers.yaml
src/crx_10ia_controller/launch/: controller.launch.py
src/crx_10ia_description/: CMakeLists.txt  package.xml
src/crx_10ia_description/launch/: display.launch.py  gazebo.launch.py
src/crx_10ia_description/meshes/: CRX-10iA_Axis2.stl  CRX-10iA_Axis6_WithConnectors.stl  ZXP7A01-ZP08UN-X1_gripper.stl
src/crx_10ia_description/rviz/: display.rviz
src/crx_10ia_description/urdf/: crx10ia.urdf.xacro  crx10ia_gazebo.xacro  crx10ia_ros2_control.xacro
src/crx_10ia_description/world/: world.sdf
src/crx_10ia_moveit/: CMakeLists.txt  package.xml
src/crx_10ia_moveit/config/: crx10ia.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml
src/crx_10ia_moveit/launch/: moveit.launch.py
src/target_localization/: CMakeLists.txt  package.xml
src/target_localization/launch/: target_localization.launch.py
src/target_localization/src/: target_localization.cpp
